--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.google.guava:guava-io:r03'
     implementation 'net.portswigger.burp.extensions:montoya-api:2023.10.3'
 }
 
