--- a/build.gradle
+++ b/build.gradle
@@ -34,4 +34,8 @@ jar {
             }
         }
     }
+
+    manifest {
+        attributes 'Main-Class': 'sh.arnaud.serializeformat.Main'
+    }
 }
